--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -50,6 +50,7 @@
 @import 'core-components/form-label';
 @import 'core-components/form-input';
 @import 'core-components/form-select';
+@import 'core-components/form-checkbox-radio';
 @import 'core-components/filter';
 
 // import site layouts styles
