--- a/src/scss/utils/_config.scss
+++ b/src/scss/utils/_config.scss
@@ -24,7 +24,7 @@ $breakpointCoverages: 'only', 'down', 'up';
 
 // Site colors.
 // color-1
-$color-1--1: #3f8cfe !default;
+$color-1--1: #0b6dff !default;
 
 // Grey color
 $color-3--1: #f6f6f6 !default;
@@ -33,7 +33,8 @@ $color-3--3: #dfdfdf !default;
 $color-3--4: #727272 !default;
 $color-3--5: #252525 !default;
 
-// Neutral colors
+// Additional colors
+$color-red: #e40606;
 $color-black: #000;
 $color-white: #fff;
 
