--- a/src/views/core-components/button.njk
+++ b/src/views/core-components/button.njk
@@ -15,7 +15,7 @@
     text = 'button',
     className = 'btn',
     type = 'button',
-    icon = 'far fa-check',
+    icon = 'fas fa-check',
     iconTitle = '',
     tooltip = '',
     disabled = false,
