--- a/src/components/main-menu/_main-menu.scss
+++ b/src/components/main-menu/_main-menu.scss
@@ -1,4 +1,7 @@
 .main-menu {
+
+    $this: &;
+
     @include trs();
     @include fixed(0, 0, null, 0);
     @include size(100%, 100vh);
@@ -13,6 +16,19 @@
     &.is-open {
         transform: translateX(0);
         visibility: visible;
+    }
+
+    &__container {
+        @extend %container;
+        padding-bottom: 50px;
+    }
+
+    &__top-components {
+        align-items: center;
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        padding: 30px 0;
     }
 
     &__close-btn {
@@ -31,90 +47,64 @@
         }
     }
 
-    &__container {
-        @extend %container;
-        padding-bottom: 50px;
-    }
-
-    &__top-components {
-        align-items: center;
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: space-between;
-        padding: 40px 0;
-    }
-
-    &__actions {
-        align-items: center;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        margin: 20px 0;
-    }
-
-    &__link {
-        @include font(null, 1.5rem, $semibold);
-        @include trs();
-        align-items: center;
-        background-color: $color-3--1;
-        border-radius: 25px;
-        color: $color-3--5;
-        display: flex;
-        justify-content: center;
-        margin-left: 20px;
-        min-height: 50px;
-        padding: 12px 32px;
-        text-decoration: none;
-
-        @include on-event() {
-            background-color: $color-3--5;
-            color: $color-white;
-
-            @include fa-icon-style(false) {
-                color: $color-white;
-            }
-        }
-    }
-
-    &__search {
-        margin: 20px 0 36px;
-    }
-
     &__nav {
-        margin: 36px 0 150px;
+        margin: 20px -20px;
     }
 
     &__item {
         position: relative;
 
-        &:not(:last-child)::after {
-            @include absolute(null, null, 0, 0);
-            @include size(100%, 1px);
-            background-color: $color-3--1;
-            content: '';
+        &:not(:last-child) {
+            border-bottom: 1px solid $color-3--3;
+        }
+
+        &.is-open {
+            #{$this}__link-icon {
+                transform: rotateX(-180deg);
+            }
         }
     }
 
     &__item-link {
         @include font(null, 1.8rem, $normal);
+        @include size(100%, auto);
         @include trs();
-        border-radius: 25px;
-        color: $color-3--5;
+        align-items: center;
+        background-color: transparent;
+        border: {
+            radius: $border-radius;
+            width: 0;
+        }
+        color: $color-black;
         display: flex;
-        margin: 0 -20px;
-        padding: 12px 20px;
+        justify-content: space-between;
+        padding: 15px 20px;
         text-decoration: none;
 
         @include on-event() {
             background-color: $color-1--1;
+            color: $color-white;
         }
 
+        &[aria-expanded="true"],
         &[aria-current="page"] {
             background-color: $color-1--1;
+            color: $color-white;
         }
     }
 
-    &__contact-info {
-        margin: 150px 0 50px;
+    &__item-icon {
+        margin-left: auto;
+    }
+
+    &__dropdown {
+        @include reset-position();
+        border: 0;
+        padding: 0;
+
+        #{$this}__item-link {
+            font-size: 1.6rem;
+            padding: 15px 40px;
+        }
     }
 }
