--- a/src/scss/core-components/_form.scss
+++ b/src/scss/core-components/_form.scss
@@ -31,6 +31,10 @@ fieldset {
         }
     }
 
+    &__legend {
+        margin: 0 0 30px;
+    }
+
     &__wrapper-inner {
         align-items: center;
         display: flex;
@@ -56,10 +60,10 @@ fieldset {
         display: flex;
         flex: 0 1 auto;
         flex-wrap: wrap;
-        margin: 0 -10px;
+        margin: 0 -23px;
 
         @include breakpoint(small down) {
-            margin: 0 -23px;
+            margin: 0 -10px;
         }
     }
 
@@ -67,21 +71,25 @@ fieldset {
         padding: 0 23px;
 
         @include breakpoint(small down) {
-            padding: 4px 20px;
+            padding: 4px 10px;
+        }
+
+        &.col-xs-12 {
+            flex-basis: 100%;
+            max-width: 100%;
         }
 
         &.col-md-6 {
-            width: 50%;
-
-            @include breakpoint(small down) {
-                width: 100%;
+            @include breakpoint(medium) {
+                flex-basis: 50%;
+                max-width: 50%;
             }
         }
     }
 
     &__field-wrapper {
         flex: 0 0 auto;
-        margin: 0 0 15px;
+        margin: 0 0 30px;
         position: relative;
         width: auto;
 
@@ -96,7 +104,24 @@ fieldset {
         }
     }
 
+    &__radio-checkbox {
+        margin: 0 0 15px;
+    }
+
+    &__label {
+        margin: 0 0 15px;
+    }
+
     &__buttons {
         display: flex;
+        justify-content: center;
+
+        &.is-left {
+            justify-content: flex-start;
+        }
+
+        &.is-right {
+            justify-content: flex-end;
+        }
     }
 }
